+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.4c1?
=============================

*Release date: DD-MMM-2006*

Core and builtins
-----------------

- Bug #1331062: Fix error in UTF-7 codec.

- Bug #1365916: Fix an int/long mismatch in the sorted() built-in.

- Fix memory leak of coding spec in Parser/tokenizer.c.
 
- Overflow checking code in integer division ran afoul of new gcc
  optimizations.  Changed to be more standard-conforming.

- Fix warnings reported by Klocwork's static analysis tool.

- Patch #1541585: fix buffer overrun when performing repr() on
  a unicode string in a build with wide unicode (UCS-4) support.

- Bug #1536786: buffer comparison could emit a RuntimeWarning.

- Bug #1535165: fixed a segfault in input() and raw_input() when
  sys.stdin is closed.

- Bug #1524310: Properly report errors from FindNextFile in os.listdir.

- Bug #1232517: An overflow error was not detected properly when
  attempting to convert a large float to an int in os.utime().

- Bug #927248: Recursive method-wrapper objects can now safely
  be released.

- Bug #992017: A classic class that defined a __coerce__() method that returned
  its arguments swapped would infinitely recurse and segfault the interpreter.

- Bug #532646: The object set to the __call__ attribute has its own __call__
  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.

- Bug #1454485: Don't crash on Unicode characters <0.

- Patch #1488312, Fix memory alignment problem on SPARC in unicode

- Fixed a few bugs on cjkcodecs:
  - gbk and gb18030 codec now handle U+30FB KATAKANA MIDDLE DOT correctly.
  - iso2022_jp_2 codec now encodes into G0 for KS X 1001, GB2312
    codepoints to conform the standard.
  - iso2022_jp_3 and iso2022_jp_2004 codec can encode JIS X 2013:2
    codepoints now.
